[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.11"
toml = "0.5"
derive_more = "0.99"
search_base = { path = "../search_base" }
tantivy = "0.16"
chrono = { version = "0.4", features = ["serde"] }
cang-jie = "0.13"

[dev-dependencies]
tempfile = "3"
