[package]
name = "search_base"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tantivy = "0.16" # Should be "0.16", see https://github.com/DCjanus/cang-jie/issues/27
jieba-rs = "0.6"
cang-jie = "0.13"
